css fix for client list on mobile

--- a/wp-content/themes/vslv/assets/less/app.less
+++ b/wp-content/themes/vslv/assets/less/app.less
@@ -1156,6 +1156,15 @@ main {
       margin:0;
       padding: 0;
 
+      
+      @media screen 
+        and (min-device-width: 320px)
+        and (max-device-width: 568px) {
+
+        line-height: 2em;
+
+      }
+
       > li {
 
           margin-bottom: 4px;
@@ -1217,8 +1226,8 @@ main {
           letter-spacing: 0.08rem;
 
           @media screen 
-        and (min-device-width: 320px)
-        and (max-device-width: 568px) {
+            and (min-device-width: 320px)
+            and (max-device-width: 568px) {
 
             font-size: 0.750rem;
 
